@@ -5,10 +5,7 @@ import com.example.be_java_hisp_w23_g3.entity.User;
 import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Repository
 public class SellerRepositoryImpl implements SellerRepository{
@@ -22,7 +19,8 @@ public class SellerRepositoryImpl implements SellerRepository{
     @PostConstruct
     private void load() {
         sellers.addAll(List.of(
-                Seller.build(User.build(7L, "seller1"), Set.of(User.build(13L, "follower1"), User.build(13L, "follower1")), new HashMap<>()),
+                Seller.build(User.build(7L, "seller1"),
+                        new HashSet<>(Arrays.asList(User.build(13L, "follower1"), User.build(6L, "follower1"))), new HashMap<>()),
                 Seller.build(User.build(8L, "seller2")),
                 Seller.build(User.build(9L, "seller3")),
                 Seller.build(User.build(10L, "seller4")),
