@@ -5,9 +5,7 @@ import com.example.be_java_hisp_w23_g3.entity.User;
 import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Repository
 public class UserRepositoryImpl implements UserRepository {
@@ -33,7 +31,7 @@ public class UserRepositoryImpl implements UserRepository {
     @PostConstruct
     private void load() {
         users.addAll(List.of(
-                User.build(1L, "user1", Set.of(Seller.build(User.build(8L,"seller8")))),
+                User.build(1L, "user1", new HashSet<>(Arrays.asList(Seller.build(User.build(8L,"seller8"))))),
                 User.build(2L, "user2"),
                 User.build(3L, "user3"),
                 User.build(4L, "user4"),
@@ -41,4 +39,5 @@ public class UserRepositoryImpl implements UserRepository {
                 User.build(6L, "user6")
         ));
     }
+
 }
